padding/margin 0 body -> *

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
-body {
+* {
 	margin: 0;
 	padding: 0;
-	background-color: #f3f3f3;
 	font-family: Arial;
+}
+
+body {
+	background-color: #f3f3f3;
 }
 
 .wrapper {
