--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body {
 }
 
 .main {
-	min-height: 500px;
+	min-height: 700px;
 	background-color: white;
 }
 
@@ -52,3 +52,47 @@ body {
 	color: #fff;
 	padding: 10px;	
 }
+
+/* Styles Jeroen */
+
+.col250{
+	float: left;
+	line-height: 140%;
+	margin-bottom: 5px;
+	padding: 5px;
+	width: 240px;
+}
+
+.jeroen{
+	margin-top: 75px;
+	-ms-transform: rotate(270deg); /* IE 9 */
+	-webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+	transform: rotate(270deg);
+}
+
+.col750{
+	float: left;
+	line-height: 140%;
+	padding: 5px;
+	width: 740px;
+}
+
+.col750 p{
+	margin-bottom: 10px;
+}
+
+.form-control{
+	margin-bottom: 5px;
+	width: 305px;
+}
+
+.right{
+	float: right;
+}
+
+.genres{
+	list-style: none;
+	margin-left: 50px;
+}
+
+/* End Styles Jeroen */
